--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 <body>
 <div>
     <script src="scripts.js"></script>
+    <textarea name="json" id="jsonfile" cols="30" rows="10"></textarea><br>
 
-    <input type="text" name="nome" id="nome">
+    <input type="text" name="nome" id="nome"><br>
     <input type="text" name="dataNasc" id="data"><br>
-    <input type="file" name="file" id="file">
+    <input type="file" name="file" id="file"><br>
     <button onclick="enviarJson()">Enviar JSON</button><br>
-    <button onclick="enviarArquivo()">Enviar Arquivo</button>
+    <button onclick="enviarArquivo()">Enviar Arquivo</button><br>
 </div>
 </body>
 </html>
