--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <input type="file" name="file" id="file"><br>
     <button onclick="enviarJson()">Enviar JSON</button><br>
     <button onclick="enviarArquivo()">Enviar Arquivo</button><br>
-    <button onclick="">GeraEnviaJson</button><br>
+    <button onclick="GeraEnviaJson()">GeraEnviaJson</button><br>
 </div>
 </body>
 </html>
