--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <div>
-    <script src="scripts.js"></script>
+    <script src="scripts2.js"></script>
     <textarea name="json" id="jsonfile" cols="30" rows="10"></textarea><br>
 
     <input type="text" placeholder="nome" name="nome" id="nome"><br>
